--- a/agents/Pipfile
+++ b/agents/Pipfile
@@ -4,9 +4,9 @@ verify_ssl = true
 name = "pypi"
  
 [packages]
-langchain = "==0.0.352"
-openai = "==0.27.8"
-python-dotenv = "==1.0.0"
+langchain = "==0.1.16"
+python-dotenv = "==1.0.1"
+langchain-openai = "==0.1.3"
 pyboxen = "*"
  
 [dev-packages]
